token ops
